--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Server Configuration
 server.port=8080 
+
+sercretJwtString=phegondev123456789phegondev123456789
