backend is done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,31 @@
  spring.application.name=gestion_stock
 
 # Database Configuration
+#spring.datasource.url=jdbc:mysql://localhost:5050/inventory_db?useSSL=false&serverTimezone=UTC
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.username=root
+#spring.datasource.password=root
+# Database Connection Settings
 spring.datasource.url=jdbc:mysql://localhost:5050/inventory_db?useSSL=false&serverTimezone=UTC
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA/Hibernate Settings
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
 
 # Hibernate Configuration
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+
+
 # Server Configuration
 server.port=8080 
+
 
 secreteJwtString=phegondev123456789phegondev123456789
